index method for stock controller
